# CFScanner

./: .gitignore  .gitmodules  README.md  sa
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: gobuild.yml  (+1 more)
Android/: .gitignore  README.md  settings.gradle
android/: README.md  build.gradle  settings.gradle
bash/: ClientConfig.json  ClientConfig2.json  README.md  cfScanner.sh  config.json.temp  config.script  custom.subnets  xrayClientConfig.json  xrayConfig.json.temp
config/: ClientConfig.json  cf.local.iplist  token.secret
docker/: Dockerfile  README.md
files/: upload_file
gist/: main.py
golang/: .goreleaser.yaml  README.md  cmd.go  go.mod  go.sum  main.go  run.go
ping/: .gitignore  CONTRIBUTING.md
python/: .gitignore  README.md  cfFindIP.py  cfscanner.py  clog.py  config.real  config.sample  pyproject.toml  requirements.txt  version.py
python/args/: parser.py  testconfig.py
python/cfscanner/: __init__.py  __main__.py  cfFindIP.py  cfscanner.py  clog.py  main.py
python/cfscanner/args/: parser.py  testconfig.py
python/cfscanner/report/: colors.py  print.py  result.py
python/cfscanner/speedtest/: conduct.py  download.py  fronting.py  tools.py  upload.py
python/cfscanner/subnets/: __init__.py  cidr.py
python/cfscanner/utils/: decorators.py  os.py  random.py  requests.py
python/cfscanner/xray/: __init__.py  binary.py  config.py  service.py
python/config_templates/: vmess_ws_tls_template.json
python/report/: __init__.py  clog.py  print.py
python/speedtest/: __init__.py  conduct.py  download.py  fronting.py  tools.py
python/src/cfscanner/: main.py
python/src/cfscanner/args/: parser.py  testconfig.py
python/src/cfscanner/report/: colors.py  logging_setup.py  print.py  result.py
python/src/cfscanner/speedtest/: conduct.py  download.py  fronting.py  tools.py  upload.py
python/src/cfscanner/subnets/: cidr.py  regex.py
python/src/cfscanner/utils/: decorators.py  exceptions.py  os.py  random.py  requests.py  socket.py
python/src/cfscanner/xray/: __init__.py  binary.py  config.py  service.py  templates.py
python/subnets/: __init__.py  cidr.py  regex.py
python/utils/: __init__.py  exceptions.py  os.py  requests.py  socket.py
python/xray/: __init__.py  binary.py  config.py  service.py  templates.py
result/: 20230120-203358-result.cf
scripts/: cf.local.iplist  cfFindIP.sh  cfFindIPFromList.sh  config.json.temp  config.script  custom.subnets  ip.list
windows/: .gitignore  Program.cs  README.md  WinCFScan.csproj  WinCFScan.sln  frmMain.Designer.cs  frmMain.cs  frmMain.resx
(+302 files in other folders)
