[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfscanner"
version = "1.4.2"
authors = [
  { name="tempookian", email="tempookian@gmail.com" },
  { name="Morteza Bashsiz", email="morteza.bashsiz@gmail.com"}
]
description = "Cloudflare's edge IPs scanner to locate ones that are viable for use with v2ray/xray"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.28.2",
  "pysocks>=1.7.1",
  "rich>=13.3.3",
  "setuptools"
]

[project.urls]
"Homepage" = "https://github.com/MortezaBashsiz/CFScanner/tree/main/python"
"Bug Tracker" = "https://github.com/MortezaBashsiz/CFScanner/issues"

[project.scripts]
cfscanner = "cfscanner:main"
